<resources>
    <string name="app_name">Rallye Pulse - App</string>
    <string name="enable_bluetooth">Please enable Bluetooth</string>
    <string name="enable_bluetooth_prompt">The app requires bluetooth to work correctly. Do you wish to enable it?</string>
    <string name="cancel">Cancel</string>
    <string name="connectedtk">Connected to the timekeeper</string>
    <string name="waitingcontk">Waiting for connection with the timekeeper</string>
    <string name="enterascomp">Enter as competitor</string>
    <string name="compprom">If you are competitor enter your password below to unlock full features of the app.</string>
    <string name="enterpass">Enter competitors password.</string>
    <string name="compmode">Enter competitor mode.</string>
    <string name="spectmode">Alternatively enter spectator mode.</string>
    <string name="errorauth">The given passcode is wrong. Please try again or enter spectator mode.</string>
    <string name="hellospect">Hello Loyal Rallye Fan!</string>
    <string name="entrylist">Entry List</string>
    <string name="stageresults">Stage Results</string>
    <string name="overalls">Overalls</string>
    <string name="startlist">Start List</string>
    <string name="competitorno">Competitor No.</string>
    <string name="position">Position</string>
    <string name="racemode">Race Mode</string>
    <string name="settings">Settings</string>
    <string name="newemail">Enter the new email.</string>
    <string name="newphone">Enter the new phone number.</string>
    <string name="updinfo">Update your info.</string>
    <string name="and">and</string>
    <string name="hello">Hello</string>
    <string name="selectspecial">Select S.S</string>
    <string name="stagetimes">Results of Stage:</string>

</resources>